--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -2,6 +2,8 @@
 
 {% block body %}
     <div class="container">
+        <h2> Welcome to Pet Food Online Giga Store</h2>
+
         <div class="col-md-4">
 
             <a href="{{ path('all_products') }}">List of products</a>
