--- a/app/Resources/views/products/view_all.html.twig
+++ b/app/Resources/views/products/view_all.html.twig
@@ -1,3 +1,7 @@
+{% extends 'base.html.twig' %}
+
+{% block body %}
+
 {% for msg in app.session.flashBag.get('info') %}
     <h1 style="color: forestgreen;">{{ msg }}</h1>
 {% endfor %}
@@ -5,39 +9,52 @@
 {% for msg in app.session.flashBag.get('delete') %}
     <h1 style="color: darkred;">{{ msg }}</h1>
 {% endfor %}
+    <div class="table-responsive">
+        <table class="table">
+            <thead>
+            <tr>
+                <th>#</th>
+                <th>Name</th>
+                <th>Price</th>
+                {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_EDITOR')   %}
+                <th>Edit</th>
+                <th>Delete</th>
+                {% endif %}
+                <th>Reviews</th>
+                <th>Add Tag</th>
+                <th>View Tags</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for index, product in products %}
+            <tr>
+                <td>{{ index + 1 }}</td>
+                <td>{{ product.name }}</td>
+                <td>{{ product.price }}</td>
+                {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_EDITOR')   %}
+                <td>
+                    <a href=" {{ path('edit_product_form', {'id': product.id}) }}" class="btn-warning btn btn-sm">Edit </a>
+                </td>
 
-<table border="1" cellpadding="0" cellspacing="0">
-    <thead>
-    <tr>
-        <th>#</th>
-        <th>Name</th>
-        <th>Price</th>
-        <th>Edit</th>
-        <th>Delete</th>
-        <th>Reviews</th>
-        <th>Add Tag</th>
-        <th>View Tags</th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for index, product in products %}
-    <tr>
-        <td>{{ index + 1 }}</td>
-        <td>{{ product.name }}</td>
-        <td>{{ product.price }}</td>
-        <td><a href=" {{ path('edit_product_form', {'id': product.id}) }}">Edit </a></td>
-        <td><form method="POST" action="{{ path('delete_product_process', {'id': product.id}) }}">
-                <button type="submit">Delete</button>
-            </form>
-        </td>
-        <td>
-            <a href="{{ path('product_reviews', {'id': product.id}) }}">
-                View all reviews
-            </a>
-        </td>
-        <td><a href="{{ path('add_tag_form', {'id': product.id}) }}">add tag</a> </td>
-        <td><a href="{{ path('tags_by_product', {'id': product.id}) }}">view tags</a> </td>
-    </tr>
-    {% endfor %}
-    </tbody>
-</table>
+                <td>
+                    <form method="POST" action="{{ path('delete_product_process', {'id': product.id}) }}">
+                        <button type="submit" class="btn-danger btn btn-sm">Delete</button>
+                    </form>
+                </td>
+                {% endif %}
+
+                <td>
+                    <a href="{{ path('product_reviews', {'id': product.id}) }}"  class="col-md-offset-1">
+                        View all reviews
+                    </a>
+                </td>
+                <td><a href="{{ path('add_tag_form', {'id': product.id}) }}">add tag</a> </td>
+                <td><a href="{{ path('tags_by_product', {'id': product.id}) }}">view tags</a> </td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    <a href=" {{ path('add_product_form') }}" class="btn-primary btn btn-sm col-md-1 col-md-offset-1">Add product</a>
+
+{% endblock %}
