--- a/app/Resources/views/products/edit.html.twig
+++ b/app/Resources/views/products/edit.html.twig
@@ -1,4 +1,9 @@
-{{ form_start(productForm) }}
-{{ form_widget(productForm) }}
-<input type="submit" name="Edit">
-{{ form_end(productForm) }}
+{% extends 'base.html.twig' %}
+
+{% block body %}
+    <div class="form-group col-md-4 col-md-offset-4">
+    <h3 style="color: coral">Edit Product:</h3>
+    {{ form_start(productForm) }}
+    {{ form_widget(productForm) }}
+    {{ form_end(productForm) }}
+{% endblock %}
