--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -5,12 +5,11 @@
         <h2> Welcome to Pet Food Online Giga Store</h2>
 
         <div class="col-md-4">
-
             <a href="{{ path('all_products') }}">List of products</a>
-
             <br>
-
             <a href="{{ path('add_product_form') }}">Add product</a>
+            <br>
+            <a href="{{ path('show_user_profile') }}">Profile</a>
         </div>
     </div>
 {% endblock %}
