--- a/app/Resources/views/products/view_product.html.twig
+++ b/app/Resources/views/products/view_product.html.twig
@@ -1,14 +1,36 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="form-group col-md-4 col-md-offset-4">
-        <h3 style="color: coral">Edit Product:</h3>
-        {{ form_start(productForm) }}
-        {{ form_widget(productForm) }}
-        {{ form_end(productForm) }}
+    <div class="form-group col-md-12 col-md-offset-4">
+        <h3 style="color: coral">View Product:</h3>
+        <div>
+            <label for="product_name">Product name:</label>
+            {{ product.name }}
+        </div>
+        <div>
+            <label for="product_price">Price:</label>
+            {{ product.price }}
+        </div>
+        <div>
+            <label for="product_category">Category:</label>
+            {{ product.category }}
+        </div>
+        <div>
+            <label for="product_description">Description:</label>
+            {{ product.description }}
+        </div>
+        <div>
+            <label for="product_created_on">When created:</label>
+            {{ product.created_on }}
+        </div>
+        <div>
+            <label for="product_seller">Seller:</label>
+            {{ product.user }}
+        </div>
+
 
         <a href="{{ path('homepage') }}" class="btn-default btn btn-1" >Home</a>
-        <a href="{{ path('all_products') }}" class="btn-info btn btn-1" >Cancel</a>
+        <a href="{{ path('all_products') }}" class="btn-info btn btn-1" >Back to products</a>
     </div>
 {% endblock %}
 
