--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -10,6 +10,8 @@
             <a href="{{ path('add_product_form') }}">Add product</a>
             <br>
             <a href="{{ path('show_user_profile') }}">Profile</a>
+            <br>
+            <a href="{{ path('show_cart') }}" class="btn-warning btn btn-sm">Show cart</a>
         </div>
     </div>
 {% endblock %}
