--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -11,7 +11,9 @@
             <br>
             <a href="{{ path('show_user_profile') }}">Profile</a>
             <br>
-            <a href="{{ path('show_cart') }}" class="btn-warning btn btn-sm">Show cart</a>
+            {#<a href="{{ path('cart_show', {'cart': cart.id}) }}" class="btn-warning btn btn-sm">Show cart</a>#}
         </div>
     </div>
 {% endblock %}
+
+
