--- a/app/Resources/views/user/profile.html.twig
+++ b/app/Resources/views/user/profile.html.twig
@@ -8,7 +8,7 @@
             Currently you have {{ app.user.initialCash }} lv.<br/>
             <a href="{{ path('homepage') }}" class="btn-default btn btn-sm">Home</a>
             <a href="{{ path('edit_user_profile_form', {'id': app.user.id}) }}" class="btn-primary btn btn-sm">Edit profile</a>
-             <a href="{{ path('cart_show', {'cart': app.user.cart}) }}" class="btn-warning btn btn-sm">Show cart</a>
+             {#<a href="{{ path('cart_show') }}" class="btn-warning btn btn-sm">Show cart</a>#}
         </div>
     </div>
 {% endblock %}
