--- a/app/Resources/views/cart/show.html.twig
+++ b/app/Resources/views/cart/show.html.twig
@@ -3,7 +3,6 @@
 {% block body %}
     <h1>{{ user.username }} Cart</h1>
     {% for product in productsCart %}
-        {{ dump(product) }}
         ID: {{ product.product.id}} -> {{ product.product.name }} - {{ product.quantity }} of it<br>
     {% endfor %}
     You currently have &euro;{{ user.initialCash }}
@@ -13,6 +12,7 @@
         {%  set needed_amount = (totalPrice - user.initialCash) %}
         <div>You cannot checkout the cart. You need &euro;{{ needed_amount }} more.</div>
     {% endif %}
-    <a href="{{ path('homepage') }}" class="btn-default btn btn-1" >Back to home</a>
+    <a href="{{ path('petfoodshoppingbasket_cart_checkoutcart', {'cart': cart.id}) }}" class="btn-default btn btn-1" >Checkout</a>
+    <a href="{{ path('edit_user_profile_form', {'id': user.id}) }}" class="btn-default btn btn-1" >Add cash</a>
     <a href="{{ path('all_products') }}" class="btn-default btn btn-1" >Back to products</a>
 {% endblock %}
