--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -7,10 +7,13 @@
         <div class="col-md-4">
             <a href="{{ path('all_products') }}">List of products</a>
             <br>
-            <a href="{{ path('add_product_form') }}">Add product</a>
-            <br>
+            {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_EDITOR') %}
+                <a href="{{ path('add_product_form') }}">Add product</a>
+                <br>
+            {% endif %}
             <a href="{{ path('show_user_profile') }}">Profile</a>
             <br>
+            <a href="{{ path('logout') }}">Logout</a>
             {#<a href="{{ path('cart_show', {'cart': cart.id}) }}" class="btn-warning btn btn-sm">Show cart</a>#}
         </div>
     </div>
