--- a/src/PetFoodShoppingBasketBundle/Resources/views/Security/register.html.twig
+++ b/src/PetFoodShoppingBasketBundle/Resources/views/Security/register.html.twig
@@ -6,6 +6,7 @@
         {{ form_errors(form) }}
         {{ form_row(form.username) }}
         {{ form_row(form.password_raw) }}
+        {{ form_row(form.initialCash) }}
         {{ form_widget(form.submit, { 'label' : 'Register' }) }}
     {{ form_end(form) }}
 
